--- a/index.html
+++ b/index.html
@@ -4,9 +4,183 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://flora-ui.netlify.app/src/app.css">
+    <link rel="stylesheet" href="./index.css">
     <title>Document</title>
 </head>
 <body>
-    
+    <!-- Navbar -->
+    <nav class="nav-container align-center">
+
+        <div class="p2 nav-logo flex-r">
+            <i class="app-icon fab fa-pagelines"></i>
+            <span class="app-name">FloraShop</span>
+        </div>
+
+        <div class="nav-link">
+        <button class="btn btn-link nav-btn">Home</button>
+        <button class="btn btn-link nav-btn">Catalouges</button>
+        <button class="btn btn-link nav-btn">Garden Guide</button>
+        <button class="btn btn-link nav-btn">About us</button>
+        </div>
+
+        <div class="search-input input-container">
+            <input class="input-icon-field input-field" type="text" placeholder="Search">
+            <i class="input-icon fas fa-search"></i>
+        </div>
+
+        <div class="flex-r nav-icons">
+        <div class="flex-c center">
+        <div class="m1 badge-container">
+            <a href=""><i class="nav-icon badge-icon fas fa-user"></i></a>
+            <span class="badge right-badge sm-badge">1</span>
+        </div>
+        <span class="nav-icon-text">Profile</span>
+        </div>
+
+        <div class="flex-c center">
+        <div class="m1 badge-container">
+            <a href=""><i class="nav-icon badge-icon far fa-heart"></i></a>
+            <span class="badge right-badge sm-badge">1</span>
+        </div>
+        <span class="nav-icon-text">Wishlist</span>
+        </div>
+
+        <div class="flex-c center">
+        <div class="m1 badge-container">
+            <a href=""><i class="nav-icon badge-icon fas fa-shopping-cart"></i></a>
+            <span class="badge right-badge sm-badge">1</span>
+        </div>
+        <span class="nav-icon-text">Cart</span>
+        </div>
+        </div>
+
+    </nav>
+      
+    <!-- Main -->
+    <main class="main">
+        <div class="main-text">
+            <h1 class="main-heading">Make you own Garden at home</h1>
+            <p>Bring calm to your place with interior plants.</p>
+            <h4>Flat 20% off</h4>
+            <button class="main-btn btn btn-primary">Shop Now</button>
+        </div>
+        <!-- <img class="header-img responsive-img" src="./assets/images/snake.jpg" alt="Responsive img"> -->
+        <img class="header-img responsive-img" src="./assets/images/spider.jpg" alt="Responsive img">
+    </main> 
+
+    <!-- Best Seller section -->
+    <section class="best-seller-section">
+        <div class="best-seller-text">
+            <h3 class="p1">Top best seller Products</h3>
+            <p>Find what others are having on their garden</p>
+        </div>
+        <div class="flex-r best-seller-cards">
+        <div class="m1 card vertical-card1-container">
+            <img src="./assets/images/fiddle-leaf.jpg" alt="Fiddle Leaf fig" class="card-img">
+            <div class="p1 card-text-container">
+                    <h5 class="card-header">Fiddle Leaf Fig</h5>
+                    <div class="card-info">Stock available</div>
+                    <div class="align-center">
+                        <p class="card-price">Rs. 550</p>
+                        <button class="best-seller-icon btn btn-icon card-icon-btn">
+                            <i class="far fa-heart"></i>
+                        </button>
+                    </div>  
+            </div>
+        </div>
+
+        <div class="m1 card vertical-card1-container">
+            <img src="./assets/images/zzplant.jpg" alt="ZZ Plant" class="card-img">
+            <div class="p1 card-text-container">
+                    <h5 class="card-header">ZZ Plant</h5>
+                    <div class="card-info">Stock available</div>
+                    <div class="align-center">
+                        <p class="card-price">Rs.600</p>
+                        <button class="best-seller-icon btn btn-icon card-icon-btn">
+                            <i class="far fa-heart"></i>
+                        </button>
+                    </div>  
+            </div>
+        </div>
+
+        <div class="m1 card vertical-card1-container">
+            <img src="./assets/images/spiderPlant.jpg" alt="Spider Plant" class="card-img">
+            <div class="p1 card-text-container">
+                    <h5 class="card-header">Spider Plant</h5>
+                    <div class="card-info">Stock available</div>
+                    <div class="align-center">
+                        <p class="card-price">Rs. 299</p>
+                        <button class="best-seller-icon btn btn-icon card-icon-btn">
+                            <i class="far fa-heart"></i>
+                        </button>
+                    </div>  
+            </div>
+        </div>
+
+        <div class="m1 card vertical-card1-container">
+            <img src="./assets/images/zebra.jpg" alt="Zebra PLant" class="card-img">
+            <div class="p1 card-text-container">
+                    <h5 class="card-header">Zebra Plant</h5>
+                    <div class="card-info">Stock available</div>
+                    <div class="align-center">
+                        <p class="card-price">Rs. 700</p>
+                        <button class="best-seller-icon btn btn-icon card-icon-btn">
+                            <i class="far fa-heart"></i>
+                        </button>
+                    </div>  
+            </div>
+        </div>
+        </div>
+    </section>
+
+    <section class="featured-prod-section">
+        <h3 class="featured-text">Our Featured</h3>
+        <div class="center flex-wrap featured-products">
+        <div class="">
+            <img class="featured-img" src="./assets/images/planter.jpg" alt="Planters">
+            <div class="featured-overlay">
+                <h4>Planters</h4>
+                <button class="btn btn-secondary">Shop Now</button>
+            </div>
+        </div>
+
+        <div>
+            <img class="featured-img" src="./assets/images/snake.jpg" alt="Planters">
+            <div class="featured-overlay">
+                <h4>Plants</h4>
+                <button class="btn btn-primary">Shop Now</button>
+            </div>
+        </div>
+
+        <div>
+            <img class="featured-img" src="./assets/images/fertilizer.jpg" alt="Planters">
+            <div class="featured-overlay">
+                <h4>Fertilizers</h4>
+                <button class="btn btn-primary">Shop Now</button>
+            </div>
+        </div>
+
+        <div>
+            <img class="featured-img" src="./assets/images/tools.jpg" alt="Planters">
+            <div class="featured-overlay">
+                <h4>Tools</h4>
+                <button class="btn btn-primary">Shop Now</button>
+            </div>
+        </div>
+        </div>
+    </section>
+
+    <footer class="footer">
+        <p>Made with <i class="red-color fas fa-heart"></i> by Vrinda Mahajan </p>
+        <ul class="m2 list-non-bullet">
+            <li class="p1 inline"><a class="footer-icons" href="https://github.com/vrinda-mahajan"><i class="fab fa-github"></i></a></li>
+            <li class="p1 inline"><a class="footer-icons" href="https://twitter.com/vrinda_mahajan"><i class="fab fa-twitter"></i></a></li>
+            <li class="p1 inline"><a class="footer-icons" href="https://www.linkedin.com/in/vrinda-mahajan-7a2b2a20b/"><i class="fab fa-linkedin-in"></i></a></li>
+        </ul>
+        <div>© copyright 2022 Flora UI</div>
+    </footer>
+
 </body>
 </html>
