Added Product Page

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
         </div>
 
         <div class="nav-link">
-        <button class="btn btn-link nav-btn">Home</button>
-        <button class="btn btn-link nav-btn">Catalouges</button>
-        <button class="btn btn-link nav-btn">Garden Guide</button>
-        <button class="btn btn-link nav-btn">About us</button>
+        <a href="#"><button class="btn btn-link nav-btn">Home</button></a>
+        <a href="#featured-prod-section"><button class="btn btn-link nav-btn">Catalouges</button></a>
+        <a href=""><button class="btn btn-link nav-btn">Garden Guide</button></a>
+        <a href=""><button class="btn btn-link nav-btn">About us</button></a>
         </div>
 
         <div class="search-input input-container">
@@ -34,7 +34,6 @@
         <div class="flex-c center">
         <div class="m1 badge-container">
             <a href=""><i class="nav-icon badge-icon fas fa-user"></i></a>
-            <span class="badge right-badge sm-badge">1</span>
         </div>
         <span class="nav-icon-text">Profile</span>
         </div>
@@ -61,7 +60,7 @@
     <!-- Main -->
     <main class="main">
         <div class="main-text">
-            <h1 class="main-heading">Make you own Garden at home</h1>
+            <h1 class="main-heading">Make your own Garden at home</h1>
             <p>Bring calm to your place with interior plants.</p>
             <h4>Flat 20% off</h4>
             <button class="main-btn btn btn-primary">Shop Now</button>
@@ -135,14 +134,14 @@
         </div>
     </section>
 
-    <section class="featured-prod-section">
+    <section id="featured-prod-section">
         <h3 class="featured-text">Our Featured</h3>
         <div class="center flex-wrap featured-products">
         <div class="">
             <img class="featured-img" src="./assets/images/planter.jpg" alt="Planters">
             <div class="featured-overlay">
                 <h4>Planters</h4>
-                <button class="btn btn-secondary">Shop Now</button>
+                <a href="./Pages/ProductPage/ProductPage.html"><button class="btn btn-primary btn-featured">Shop Now</button></a>
             </div>
         </div>
 
@@ -150,7 +149,7 @@
             <img class="featured-img" src="./assets/images/snake.jpg" alt="Planters">
             <div class="featured-overlay">
                 <h4>Plants</h4>
-                <button class="btn btn-primary">Shop Now</button>
+                <a href="./Pages/ProductPage/ProductPage.html"><button class="btn btn-primary btn-featured">Shop Now</button></a>
             </div>
         </div>
 
@@ -158,7 +157,7 @@
             <img class="featured-img" src="./assets/images/fertilizer.jpg" alt="Planters">
             <div class="featured-overlay">
                 <h4>Fertilizers</h4>
-                <button class="btn btn-primary">Shop Now</button>
+                <a href="./Pages/ProductPage/ProductPage.html"><button class="btn btn-primary btn-featured">Shop Now</button></a>
             </div>
         </div>
 
@@ -166,7 +165,7 @@
             <img class="featured-img" src="./assets/images/tools.jpg" alt="Planters">
             <div class="featured-overlay">
                 <h4>Tools</h4>
-                <button class="btn btn-primary">Shop Now</button>
+                <a href="./Pages/ProductPage/ProductPage.html"><button class="btn btn-primary btn-featured">Shop Now</button></a>
             </div>
         </div>
         </div>
