Added login and signup page

--- a/Pages/ProductPage/ProductPage.html
+++ b/Pages/ProductPage/ProductPage.html
@@ -32,9 +32,9 @@
         <div class="flex-r nav-icons">
         <div class="flex-c center">
         <div class="m1 badge-container">
-            <a href=""><i class="nav-icon badge-icon fas fa-user"></i></a>
+            <a href="../Authentication/Authentication.html"><i class="nav-icon badge-icon fas fa-user"></i></a>
         </div>
-        <span class="nav-icon-text">Profile</span>
+        <span class="nav-icon-text">Account</span>
         </div>
 
         <div class="flex-c center">
