Added Wishlist and Cart Page

--- a/Pages/Authentication/Authentication.html
+++ b/Pages/Authentication/Authentication.html
@@ -33,7 +33,7 @@
 
         <div class="flex-c center">
         <div class="m1 badge-container">
-            <a href=""><i class="nav-icon badge-icon far fa-heart"></i></a>
+            <a href="../Wishlist/Wishlist.html"><i class="nav-icon badge-icon far fa-heart"></i></a>
             <span class="badge right-badge sm-badge">1</span>
         </div>
         <span class="nav-icon-text">Wishlist</span>
@@ -41,7 +41,7 @@
 
         <div class="flex-c center">
         <div class="m1 badge-container">
-            <a href=""><i class="nav-icon badge-icon fas fa-shopping-cart"></i></a>
+            <a href="../Cart/Cart.html"><i class="nav-icon badge-icon fas fa-shopping-cart"></i></a>
             <span class="badge right-badge sm-badge">1</span>
         </div>
         <span class="nav-icon-text">Cart</span>
