--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
         <div class="flex-c center">
         <div class="m1 badge-container">
-            <a href=""><i class="nav-icon badge-icon far fa-heart"></i></a>
+            <a href="./Pages/Wishlist/Wishlist.html"><i class="nav-icon badge-icon far fa-heart"></i></a>
             <span class="badge right-badge sm-badge">1</span>
         </div>
         <span class="nav-icon-text">Wishlist</span>
@@ -48,7 +48,7 @@
 
         <div class="flex-c center">
         <div class="m1 badge-container">
-            <a href=""><i class="nav-icon badge-icon fas fa-shopping-cart"></i></a>
+            <a href="./Pages/Cart/Cart.html"><i class="nav-icon badge-icon fas fa-shopping-cart"></i></a>
             <span class="badge right-badge sm-badge">1</span>
         </div>
         <span class="nav-icon-text">Cart</span>
