refactored CL broken code

--- a/Pages/Authentication/Authentication.html
+++ b/Pages/Authentication/Authentication.html
@@ -13,8 +13,10 @@
     <nav class="nav-container align-center">
 
         <div class="p2 nav-logo flex-r">
+            <a href="../../index.html" class="text-decor-none">
             <i class="app-icon fab fa-pagelines"></i>
             <span class="app-name">FloraShop</span>
+            </a>
         </div>
 
         <div class="nav-link">
@@ -34,7 +36,7 @@
         <div class="flex-c center">
         <div class="m1 badge-container">
             <a href="../Wishlist/Wishlist.html"><i class="nav-icon badge-icon far fa-heart"></i></a>
-            <span class="badge right-badge sm-badge">1</span>
+            <span class="badge badge-right badge-sm">1</span>
         </div>
         <span class="nav-icon-text">Wishlist</span>
         </div>
@@ -42,7 +44,7 @@
         <div class="flex-c center">
         <div class="m1 badge-container">
             <a href="../Cart/Cart.html"><i class="nav-icon badge-icon fas fa-shopping-cart"></i></a>
-            <span class="badge right-badge sm-badge">1</span>
+            <span class="badge badge-right badge-sm">1</span>
         </div>
         <span class="nav-icon-text">Cart</span>
         </div>
