--- a/Pages/ProductPage/ProductPage.html
+++ b/Pages/ProductPage/ProductPage.html
@@ -13,8 +13,10 @@
     <nav class="nav-container align-center">
 
         <div class="p2 nav-logo flex-r">
+            <a href="../../index.html" class="text-decor-none">
             <i class="app-icon fab fa-pagelines"></i>
             <span class="app-name">FloraShop</span>
+            </a>
         </div>
 
         <div class="nav-link">
@@ -40,7 +42,7 @@
         <div class="flex-c center">
         <div class="m1 badge-container">
             <a href="../Wishlist/Wishlist.html"><i class="nav-icon badge-icon far fa-heart"></i></a>
-            <span class="badge right-badge sm-badge">1</span>
+            <span class="badge badge-right badge-sm">1</span>
         </div>
         <span class="nav-icon-text">Wishlist</span>
         </div>
@@ -48,7 +50,7 @@
         <div class="flex-c center">
         <div class="m1 badge-container">
             <a href="../Cart/Cart.html"><i class="nav-icon badge-icon fas fa-shopping-cart"></i></a>
-            <span class="badge right-badge sm-badge">1</span>
+            <span class="badge badge-right badge-sm">1</span>
         </div>
         <span class="nav-icon-text">Cart</span>
         </div>
@@ -104,7 +106,7 @@
     </aside>
     <main class="product-main flex-wrap">
 
-        <div class="card vertical-card2-container product-card">
+        <div class="card card-vertical-container2 product-card">
             <img src="../../assets/images/croton.jpg" alt="croton" class="card-img">
             <div class="p1 card-text-container">
                 <div class="card-heading flex-r">
@@ -117,12 +119,12 @@
                 <h6>Neque porro quisquam est qui  adipisci velit...</h6>
                 <div class="card-btns align-center">
                     <button class="btn btn-with-icon"><i class="p1-right fas fa-shopping-cart"></i>Add to cart</button>
-                    <button class="btn btn-icon card-icon-btn m-left-auto"><i class="far fa-heart"></i></button>
+                    <button class="btn btn-icon1 card-icon-btn m-left-auto"><i class="far fa-heart"></i></button>
                 </div>
             </div> 
         </div>
 
-        <div class="card vertical-card2-container product-card">
+        <div class="card card-vertical-container2 product-card">
             <img src="../../assets/images/zzplant.jpg" alt="zz plant" class="card-img">
             <div class="p1 card-text-container">
                 <div class="card-heading flex-r">
@@ -135,12 +137,12 @@
                 <h6>Neque porro quisquam est qui  adipisci velit...</h6>
                 <div class="card-btns align-center">
                     <button class="btn btn-with-icon"><i class="p1-right fas fa-shopping-cart"></i>Add to cart</button>
-                    <button class="btn btn-icon card-icon-btn m-left-auto"><i class="far fa-heart"></i></button>
+                    <button class="btn btn-icon1 card-icon-btn m-left-auto"><i class="far fa-heart"></i></button>
                 </div>
             </div> 
         </div>
 
-        <div class="card vertical-card2-container product-card">
+        <div class="card card-vertical-container2 product-card">
             <img src="../../assets/images/spiderPlant.jpg" alt="spider plant" class="card-img">
             <div class="p1 card-text-container">
                 <div class="card-heading flex-r">
@@ -153,12 +155,12 @@
                 <h6>Neque porro quisquam est qui  adipisci velit...</h6>
                 <div class="card-btns align-center">
                     <button class="btn btn-with-icon"><i class="p1-right fas fa-shopping-cart"></i>Add to cart</button>
-                    <button class="btn btn-icon card-icon-btn m-left-auto"><i class="far fa-heart"></i></button>
+                    <button class="btn btn-icon1 card-icon-btn m-left-auto"><i class="far fa-heart"></i></button>
                 </div>
             </div> 
         </div>
 
-        <div class="card vertical-card2-container product-card">
+        <div class="card card-vertical-container2 product-card">
             <img src="../../assets/images/zebra.jpg" alt="zebra plant" class="card-img">
             <div class="p1 card-text-container">
                 <div class="card-heading flex-r">
@@ -171,12 +173,12 @@
                 <h6>Neque porro quisquam est qui  adipisci velit...</h6>
                 <div class="card-btns align-center">
                     <button class="btn btn-with-icon"><i class="p1-right fas fa-shopping-cart"></i>Add to cart</button>
-                    <button class="btn btn-icon card-icon-btn m-left-auto"><i class="far fa-heart"></i></button>
+                    <button class="btn btn-icon1 card-icon-btn m-left-auto"><i class="far fa-heart"></i></button>
                 </div>
             </div> 
         </div>
 
-        <div class="card vertical-card2-container product-card">
+        <div class="card card-vertical-container2 product-card">
             <img src="../../assets/images/cocopeat.jpg" alt="cocopeat" class="card-img">
             <div class="p1 card-text-container">
                 <div class="card-heading flex-r">
@@ -189,12 +191,12 @@
                 <h6>Neque porro quisquam est qui  adipisci velit...</h6>
                 <div class="card-btns align-center">
                     <button class="btn btn-with-icon"><i class="p1-right fas fa-shopping-cart"></i>Add to cart</button>
-                    <button class="btn btn-icon card-icon-btn m-left-auto"><i class="far fa-heart"></i></button>
+                    <button class="btn btn-icon1 card-icon-btn m-left-auto"><i class="far fa-heart"></i></button>
                 </div>
             </div> 
         </div>
 
-        <div class="card vertical-card2-container product-card">
+        <div class="card card-vertical-container2 product-card">
             <img src="../../assets/images/vermicompost.jpg" alt="vermicompost" class="card-img">
             <div class="p1 card-text-container">
                 <div class="card-heading flex-r">
@@ -207,14 +209,14 @@
                 <h6>Neque porro quisquam est qui  adipisci velit...</h6>
                 <div class="card-btns align-center">
                     <button class="btn btn-with-icon"><i class="p1-right fas fa-shopping-cart"></i>Add to cart</button>
-                    <button class="btn btn-icon card-icon-btn m-left-auto"><i class="far fa-heart"></i></button>
+                    <button class="btn btn-icon1 card-icon-btn m-left-auto"><i class="far fa-heart"></i></button>
                 </div>
             </div> 
         </div>
 
-        <div class="card vertical-card2-container product-card">
+        <div class="card card-vertical-container2 product-card">
             <div class="badge-container">
-                <span class="text-badge">NEW</span>
+                <span class="badge-text">NEW</span>
                 <img src="../../assets/images/planter1.jpg" alt="planter" class="card-img">
             </div>
             <div class="p1 card-text-container">
@@ -228,12 +230,12 @@
                 <h6>Neque porro quisquam est qui  adipisci velit...</h6>
                 <div class="card-btns align-center">
                     <button class="btn btn-with-icon"><i class="p1-right fas fa-shopping-cart"></i>Add to cart</button>
-                    <button class="btn btn-icon card-icon-btn m-left-auto"><i class="far fa-heart"></i></button>
+                    <button class="btn btn-icon1 card-icon-btn m-left-auto"><i class="far fa-heart"></i></button>
                 </div>
             </div> 
         </div>
 
-        <div class="card vertical-card2-container product-card">
+        <div class="card card-vertical-container2 product-card">
             <img src="../../assets/images/planter2.jpg" alt="planter" class="card-img">
             <div class="p1 card-text-container">
                 <div class="card-heading flex-r">
@@ -246,12 +248,12 @@
                 <h6>Neque porro quisquam est qui  adipisci velit...</h6>
                 <div class="card-btns align-center">
                     <button class="btn btn-with-icon"><i class="p1-right fas fa-shopping-cart"></i>Add to cart</button>
-                    <button class="btn btn-icon card-icon-btn m-left-auto"><i class="far fa-heart"></i></button>
+                    <button class="btn btn-icon1 card-icon-btn m-left-auto"><i class="far fa-heart"></i></button>
                 </div>
             </div> 
         </div>
 
-        <div class="card vertical-card2-container product-card">
+        <div class="card card-vertical-container2 product-card">
             <img src="../../assets/images/tool3.jpg" alt="tool" class="card-img">
             <div class="p1 card-text-container">
                 <div class="card-heading flex-r">
@@ -264,7 +266,7 @@
                 <h6>Neque porro quisquam est qui  adipisci velit...</h6>
                 <div class="card-btns align-center">
                     <button class="btn btn-with-icon"><i class="p1-right fas fa-shopping-cart"></i>Add to cart</button>
-                    <button class="btn btn-icon card-icon-btn m-left-auto"><i class="far fa-heart"></i></button>
+                    <button class="btn btn-icon1 card-icon-btn m-left-auto"><i class="far fa-heart"></i></button>
                 </div>
             </div> 
         </div>
