--- a/Pages/Wishlist/Wishlist.html
+++ b/Pages/Wishlist/Wishlist.html
@@ -13,8 +13,10 @@
     <nav class="nav-container align-center">
 
         <div class="p2 nav-logo flex-r">
+            <a href="../../index.html" class="text-decor-none">
             <i class="app-icon fab fa-pagelines"></i>
             <span class="app-name">FloraShop</span>
+            </a>
         </div>
 
         <div class="nav-link">
@@ -40,7 +42,7 @@
         <div class="flex-c center">
         <div class="m1 badge-container">
             <a href="../Wishlist/Wishlist.html"><i class="nav-icon badge-icon far fa-heart"></i></a>
-            <span class="badge right-badge sm-badge">1</span>
+            <span class="badge badge-right badge-sm">1</span>
         </div>
         <span class="nav-icon-text">Wishlist</span>
         </div>
@@ -48,7 +50,7 @@
         <div class="flex-c center">
         <div class="m1 badge-container">
             <a href="../Cart/Cart.html"><i class="nav-icon badge-icon fas fa-shopping-cart"></i></a>
-            <span class="badge right-badge sm-badge">1</span>
+            <span class="badge badge-right badge-sm">1</span>
         </div>
         <span class="nav-icon-text">Cart</span>
         </div>
@@ -58,7 +60,7 @@
 
     <h4 class="wishlist-text">My Wishlist</h4>
     <main class="wishlist-container flex-wrap">
-        <div class="m2 card vertical-card2-container">
+        <div class="m2 card card-vertical-container2">
             <img src="../../assets/images/croton.jpg" alt="croton" class="card-img">
             <i class="card-close-btn fas fa-times"></i>
             <div class="p1 card-text-container">
@@ -78,7 +80,7 @@
             </div> 
         </div>
 
-        <div class="m2 card vertical-card2-container">
+        <div class="m2 card card-vertical-container2">
             <img src="../../assets/images/croton.jpg" alt="croton" class="card-img">
             <i class="card-close-btn fas fa-times"></i>
             <div class="p1 card-text-container">
@@ -98,7 +100,7 @@
             </div> 
         </div>
 
-        <div class="m2 card vertical-card2-container">
+        <div class="m2 card card-vertical-container2">
             <img src="../../assets/images/croton.jpg" alt="croton" class="card-img">
             <i class="card-close-btn fas fa-times"></i>
             <div class="p1 card-text-container">
@@ -118,7 +120,7 @@
             </div> 
         </div>
 
-        <div class="m2 card vertical-card2-container">
+        <div class="m2 card card-vertical-container2">
             <img src="../../assets/images/croton.jpg" alt="croton" class="card-img">
             <i class="card-close-btn fas fa-times"></i>
             <div class="p1 card-text-container">
@@ -138,7 +140,7 @@
             </div> 
         </div>
 
-        <div class="m2 card vertical-card2-container">
+        <div class="m2 card card-vertical-container2">
             <img src="../../assets/images/croton.jpg" alt="croton" class="card-img">
             <i class="card-close-btn fas fa-times"></i>
             <div class="p1 card-text-container">
@@ -158,7 +160,7 @@
             </div> 
         </div>
 
-        <div class="m2 card vertical-card2-container">
+        <div class="m2 card card-vertical-container2">
             <img src="../../assets/images/croton.jpg" alt="croton" class="card-img">
             <i class="card-close-btn fas fa-times"></i>
             <div class="p1 card-text-container">
@@ -178,7 +180,7 @@
             </div> 
         </div>
 
-        <div class="m2 card vertical-card2-container">
+        <div class="m2 card card-vertical-container2">
             <img src="../../assets/images/croton.jpg" alt="croton" class="card-img">
             <i class="card-close-btn fas fa-times"></i>
             <div class="p1 card-text-container">
