--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="flex-c center">
         <div class="m1 badge-container">
             <a href="./Pages/Wishlist/Wishlist.html"><i class="nav-icon badge-icon far fa-heart"></i></a>
-            <span class="badge right-badge sm-badge">1</span>
+            <span class="badge badge-right badge-sm">1</span>
         </div>
         <span class="nav-icon-text">Wishlist</span>
         </div>
@@ -49,7 +49,7 @@
         <div class="flex-c center">
         <div class="m1 badge-container">
             <a href="./Pages/Cart/Cart.html"><i class="nav-icon badge-icon fas fa-shopping-cart"></i></a>
-            <span class="badge right-badge sm-badge">1</span>
+            <span class="badge badge-right badge-sm">1</span>
         </div>
         <span class="nav-icon-text">Cart</span>
         </div>
@@ -76,56 +76,56 @@
             <p>Find what others are having on their garden</p>
         </div>
         <div class="flex-r best-seller-cards">
-        <div class="m1 card vertical-card1-container">
+        <div class="m1 card card-vertical-container1">
             <img src="./assets/images/fiddle-leaf.jpg" alt="Fiddle Leaf fig" class="card-img">
             <div class="p1 card-text-container">
                     <h5 class="card-header">Fiddle Leaf Fig</h5>
                     <div class="card-info">Stock available</div>
                     <div class="align-center">
                         <p class="card-price">Rs. 550</p>
-                        <button class="best-seller-icon btn btn-icon card-icon-btn">
+                        <button class="best-seller-icon btn btn-icon1 card-icon-btn">
                             <i class="far fa-heart"></i>
                         </button>
                     </div>  
             </div>
         </div>
 
-        <div class="m1 card vertical-card1-container">
+        <div class="m1 card card-vertical-container1">
             <img src="./assets/images/zzplant.jpg" alt="ZZ Plant" class="card-img">
             <div class="p1 card-text-container">
                     <h5 class="card-header">ZZ Plant</h5>
                     <div class="card-info">Stock available</div>
                     <div class="align-center">
                         <p class="card-price">Rs.600</p>
-                        <button class="best-seller-icon btn btn-icon card-icon-btn">
+                        <button class="best-seller-icon btn btn-icon1 card-icon-btn">
                             <i class="far fa-heart"></i>
                         </button>
                     </div>  
             </div>
         </div>
 
-        <div class="m1 card vertical-card1-container">
+        <div class="m1 card card-vertical-container1">
             <img src="./assets/images/spiderPlant.jpg" alt="Spider Plant" class="card-img">
             <div class="p1 card-text-container">
                     <h5 class="card-header">Spider Plant</h5>
                     <div class="card-info">Stock available</div>
                     <div class="align-center">
                         <p class="card-price">Rs. 299</p>
-                        <button class="best-seller-icon btn btn-icon card-icon-btn">
+                        <button class="best-seller-icon btn btn-icon1 card-icon-btn">
                             <i class="far fa-heart"></i>
                         </button>
                     </div>  
             </div>
         </div>
 
-        <div class="m1 card vertical-card1-container">
+        <div class="m1 card card-vertical-container1">
             <img src="./assets/images/zebra.jpg" alt="Zebra PLant" class="card-img">
             <div class="p1 card-text-container">
                     <h5 class="card-header">Zebra Plant</h5>
                     <div class="card-info">Stock available</div>
                     <div class="align-center">
                         <p class="card-price">Rs. 700</p>
-                        <button class="best-seller-icon btn btn-icon card-icon-btn">
+                        <button class="best-seller-icon btn btn-icon1 card-icon-btn">
                             <i class="far fa-heart"></i>
                         </button>
                     </div>  
