--- a/Pages/Cart/Cart.html
+++ b/Pages/Cart/Cart.html
@@ -13,8 +13,10 @@
     <nav class="nav-container align-center">
 
         <div class="p2 nav-logo flex-r">
+            <a href="../../index.html" class="text-decor-none">
             <i class="app-icon fab fa-pagelines"></i>
             <span class="app-name">FloraShop</span>
+            </a>
         </div>
 
         <div class="nav-link">
@@ -40,7 +42,7 @@
         <div class="flex-c center">
         <div class="m1 badge-container">
             <a href="../Wishlist/Wishlist.html"><i class="nav-icon badge-icon far fa-heart"></i></a>
-            <span class="badge right-badge sm-badge">1</span>
+            <span class="badge badge-right badge-sm">1</span>
         </div>
         <span class="nav-icon-text">Wishlist</span>
         </div>
@@ -48,7 +50,7 @@
         <div class="flex-c center">
         <div class="m1 badge-container">
             <a href=""><i class="nav-icon badge-icon fas fa-shopping-cart"></i></a>
-            <span class="badge right-badge sm-badge">1</span>
+            <span class="badge badge-right badge-sm">1</span>
         </div>
         <span class="nav-icon-text">Cart</span>
         </div>
@@ -60,9 +62,9 @@
     <main class="flex-r cart-section">
         <section class="cart-card-section">
 
-            <div class="m2 card flex-r horizontal-card-container">
+            <div class="m2 card flex-r card-horizontal-container">
                 <div class="badge-container">
-                    <span class="text-badge">NEW</span>
+                    <span class="badge-text">NEW</span>
                     <img src="../../assets/images/croton.jpg" alt="croton" class="card-img">
                 </div>
                 <div class="card-text-container">
@@ -84,7 +86,7 @@
                 </div> 
             </div>
 
-            <div class="m2 card flex-r horizontal-card-container">
+            <div class="m2 card flex-r card-horizontal-container">
                 <img src="../../assets/images/croton.jpg" alt="croton" class="card-img">
                 <div class="card-text-container">
                     <h5 class="card-header">Croton Plant</h5>
@@ -105,7 +107,7 @@
                 </div> 
             </div>
 
-            <div class="m2 card flex-r horizontal-card-container">
+            <div class="m2 card flex-r card-horizontal-container">
                 <img src="../../assets/images/croton.jpg" alt="croton" class="card-img">
                 <div class="card-text-container">
                     <h5 class="card-header">Croton Plant</h5>
@@ -126,7 +128,7 @@
                 </div> 
             </div>
 
-            <div class="m2 card flex-r horizontal-card-container">
+            <div class="m2 card flex-r card-horizontal-container">
                 <img src="../../assets/images/croton.jpg" alt="croton" class="card-img">
                 <div class="card-text-container">
                     <h5 class="card-header">Croton Plant</h5>
